Adding and updating Javadoc